# C_code_annalyze

./: README.md  main.py
cn/localhost01/: main.py
cn/localhost01/lteenodeb/lte_rrc/cspl/: Makefile.am  Makefile.in
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/common/: sockutil.h
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/multi/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/posix-mq/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/simple/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/sysv-ipc/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/tcp/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/udp/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/udp_ext/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/vxworks/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/drivers/winsock/: shell.c
cn/localhost01/lteenodeb/lte_rrc/cspl/h/: cspl.h  shell.h  stacklayer.h  ylib.h
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/cygwin/: eflow.c  os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/linux/: eflow.c  os.c  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/posix/: eflow.c  os.c  os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/simple/: os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/solaris/: os.c  os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/vxworks/: eflow.c  os.c  os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/win32/: os.c  os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/ports/win32-console/: eflow.c  os.c  os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/cspl/samples/: Makefile  sample-main.c  sample-stack.c  sample-stack.h
cn/localhost01/lteenodeb/lte_rrc/cspl/samples/sample-port/: os.h  os.mk  port.c  port.h
cn/localhost01/lteenodeb/lte_rrc/cspl/src/: cpool.c  cpoolset.c  cspl.c  es.c  manifest.c  mpoolset.c  run.c  stacklayer.c  ylib-bitmap.c  ylib-bitstring.c  ylib-bufop.c  ylib-crc.c  ylib-hash.c  ylib-list.c  ylib-pool.c  ylib-squeue.c  ylib-tree.c
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/common/: Makefile  main.c
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/posix-mq/: main.c  ui.c
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/sysv-ipc/: main.c  ui.c
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/tcp/: main.c  ui.c  util.h
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/tcpc/: main.c  ui.c  ui.h
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/udp/: main.c  ui.c
cn/localhost01/lteenodeb/lte_rrc/cspl/ui/unix/: main.c  ui.c  util.c
cn/localhost01/lteenodeb/lte_rrc/cspl/utils/logger/cfg/: Readme  create_cfg  gen_api  parser.awk
cn/localhost01/lteenodeb/lte_rrc/cspl/utils/logger/h/: common_nw_util.h  logger.h  logger_flrd.h  logger_init.h  logger_nw_recv.h  logger_print.h  logger_typ.h  logger_utl.h
cn/localhost01/lteenodeb/lte_rrc/cspl/utils/logger/samples/: input  nbuapidef.h  rlc_apitypes.h  rn_defs.h  rrc_api_defs.h
cn/localhost01/lteenodeb/lte_rrc/cspl/utils/logger/src/: Makefile  common_nw_util.c  logger_flrd.c  logger_init.c  logger_main.c  logger_nw_recv.c  logger_print.c  logger_utl.c
cn/localhost01/lteenodeb/lte_rrc/runner/: Makefile  Makefile.am  Makefile.in  coan_out_000000  config_file  las.h  lterunner.mk  rrc_check.c  rrc_check.h  rrc_entity.c  rrc_porting.c  rrc_validation.c  rrc_validation.h  simulation_environment.h
cn/localhost01/lteenodeb/lte_rrc/runner/drivers/: Makefile.am  Makefile.in
cn/localhost01/lteenodeb/lte_rrc/runner/drivers/rrc-cmes-udp/: coan_out_000000  shell.c
cn/localhost01/lteenodeb/lte_rrc/runner/include/: rrc_porting.h
cn/localhost01/lteenodeb/lte_rrc/sctp/: Makefile.am  Makefile.in  sctp.mk  sctp_mac.mk
cn/localhost01/lteenodeb/lte_rrc/sctp/common/cspl_port/: makefile_cspl  makefile_vxpne_cspl
cn/localhost01/lteenodeb/lte_rrc/sctp/common/cspl_port/lynx_port/: os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/sctp/common/cspl_port/vxpne_port/: os.h  os.mk
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/: makefile
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/common/h/: gw_macros.h  gw_pragma_defs.h  gw_pragma_undefs.h  gw_types.h
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/genlib/make/: makegl.mk
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/make/alpha/: makefile
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/make/linux/: makefile
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/make/solaris/: makefile
cn/localhost01/lteenodeb/lte_rrc/sctp/common/gw/make/vxworks/: makefile
cn/localhost01/lteenodeb/lte_rrc/sctp/common/port/h/: sig_cspl_wrap.h  sig_dbg.h  sig_defs.h  sig_err.h  sig_hash.h  sig_ipc.h  sig_ipc_intr.h  sig_mem.h  sig_mutx_n_sem.h  sig_nw_util.h  sig_os.h  sig_thr.h  sig_tmr.h  sig_typs.h  sig_util.h
cn/localhost01/lteenodeb/lte_rrc/sctp/common/port/linux/h/: sig_os_port.h
cn/localhost01/lteenodeb/lte_rrc/sctp/common/port/src/: sig_buff.c  sig_cspl_wrap.c  sig_dbg.c  sig_hand.c  sig_hash.c  sig_ipc.c  sig_mem.c  sig_mutx.c  sig_nw_util.c  sig_thr.c  sig_time.c  sig_tmr.c  sig_util.c
cn/localhost01/lteenodeb/lte_rrc/sctp/common/util/h/: sig_hash.h  tcpiplib.h
cn/localhost01/lteenodeb/lte_rrc/sctp/common/util/src/: sig_hand.c  sig_hash.c  sig_util.c  tcpiplib.c
cn/localhost01/lteenodeb/lte_rrc/sctp/sctp/algos/Crypto/: readme.txt
cn/localhost01/lteenodeb/lte_rrc/sctp/sctp/algos/arAdler/: makefile
cn/localhost01/lteenodeb/lte_rrc/sctp/sctp/algos/arCRC/: makefile
cn/localhost01/lteenodeb/lte_rrc/tools/advlogger/: ChangeLog  Doxyfile  Mainpage.dox  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
cn/localhost01/lteenodeb/lte_rrc/tools/advlogger/examples/: Makefile.am  Makefile.in  console_log.c  file_log.c  multi_log.c  net_log.c  syslog_log.c
cn/localhost01/lteenodeb/lte_rrc/tools/advlogger/netlogexd/: Makefile.am  Makefile.in  netlogex.c
cn/localhost01/lteenodeb/lte_rrc/tools/advlogger/src/: Makefile.am  Makefile.in  advlogging.c  advlogging.h
cn/localhost01/lteenodeb/platform_build/endc/: Makefile.am  Makefile.in  build.sh  lterrc.mk  lterrc_asn.mk  lterunner.mk  make.inc  rrc_bld_Makefile  rrc_runner_Makefile  x2ap.mk
(+2301 files in other folders)
